--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,20 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Flask",
-            "type": "python",
+            "name": "Python: FastAPI",
+            "type": "debugpy",
             "request": "launch",
-            "module": "flask",
-            "env": {
-                "FLASK_APP": "app.py",
-                "FLASK_DEBUG": "1"
-            },
+            "module": "uvicorn",
             "args": [
-                "run",
-                "--no-debugger",
-                "--no-reload",
-                "--host=0.0.0.0", 
-                "--port=5000"
+                "app:app",
+                "--reload",
+                "--port",
+                "5007",
+                "--host",
+                "0.0.0.0"
             ],
             "jinja": true,
             "justMyCode": true,
