--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build-job:       # This job runs in the build stage, which runs first.
   tags:
     - softlab
   script:
-    - python -m venv venv
+    - python3 -m venv venv
     - source venv/bin/activate
     - pip install -r requirements.txt
 
