--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 fastapi==0.115.8
-ping3==4.0.8
 pydantic==2.10.6
 sse_starlette==2.2.1
 zeroconf==0.143.0
@@ -16,3 +15,4 @@ sniffio==1.3.1
 starlette==0.41.3
 typing_extensions==4.12.2
 uvicorn==0.34.0
+aioping==0.4.0
