--- a/avahi-web.service
+++ b/avahi-web.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=gitlab-runner
 WorkingDirectory=/home/gitlab-runner/avahi-web
-ExecStart=/home/gitlab-runner/avahi-web/venv/bin/uvicorn --reload --port 8002 --host 0.0.0.0 app:app
+ExecStart=/home/gitlab-runner/avahi-web/venv/bin/uvicorn --port 8002 --host 0.0.0.0 app:app
 Restart=on-failure
 RuntimeMaxSec=1d
 
